--- a/main.css
+++ b/main.css
@@ -504,3 +504,13 @@ header {
    font-size: 15px;
    margin-left: 5px;
  }
+ .about {
+  position: relative;
+}
+
+.orb-canvas {
+  position: absolute;
+  top: 0;
+  height: 100%;
+  right: 0;
+}
