--- a/main.css
+++ b/main.css
@@ -1,84 +1,116 @@
 body {
-    font-family: 'Raleway', sans-serif;
-    color: #213053;
-    margin: 0;
+  font-family: 'Raleway', sans-serif;
+  color: #213053;
+  margin: 0;
 }
+
 header {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
   align-items: center;
   padding: 20px;
-  position: sticky;
+  position: fixed;
+  background: none;
+  left: 0;
+  right: 0;
+  transition: box-shadow, background-color .25s ease;
   top: 0;
-  background: white;
   z-index: 1;
-  }
-  .header__logo {
-    height: 30px;
-  }
-  a {
-    text-decoration: none;
-    color: #213053;
-  }
-   
-  header a {
-    font-size: 15px;
-    font-weight: 600;
-    margin-right: 25px;
-  }
-  button {
-    font-family: 'Raleway', sans-serif;
-    font-size: 15px;
-    color: #fff;
-    background-color: #23a030;
-    border: none;
-    border-radius: 15px;
-    cursor: pointer;
-    box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
-    padding: 15px;
-  }
-  .about__image {
-    width: 500px;
-  }
-   
-  .about__sun-image {
-    width: 100px;
-    height: 100px;
-  }
-  .about {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    padding-bottom: 115px;
-    padding-top: 115px;
-    background: url('img/back.png') no-repeat;
+}
+
+.header__scrolled {
+  background-color: white;
+  box-shadow: 0 12px 34px -11px rgb(65 62 101 / 10%);
+}
+
+.header__logo {
+  height: 30px;
+}
+
+a {
+  text-decoration: none;
+  color: #213053;
+}
+
+header a {
+  font-size: 15px;
+  font-weight: 600;
+  margin-right: 25px;
+}
+
+
+
+button {
+  font-family: 'Raleway', sans—serif;
+  font-size: 15px;
+  color: #fff;
+  background-color: #23a030;
+  border: none;
+  border-radius: 15px;
+  cursor: pointer;
+  box-shadow: 0 16px 36px rgb(52 213 68 / 22%);
+  padding: 15px;
+}
+
+.about {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding-bottom: 115px;
+  padding-top: 200px;
+  background: url('img/back.png') no-repeat;
   background-position: center;
   background-size: cover;
-  }
-  .about h1 {
-    font-size: 70px;
-    line-height: 76px;
-  }
-   
-  .about p {
-    font-size: 18px;
-    line-height: 30px;
-    opacity: 0.8;
-  }
-   
-  .about button {
-    font-size: 18px;
-    padding: 20px 25px;
-    border-radius: 20px;
-    margin-top: 20px;
-  }
-  .about__info {
-    max-width: 550px;
-  }
-  .form__container {
-    width: 550px;
-  }
-  .form {
+  position: relative;
+}
+
+.about__image {
+  width: 500px;
+}
+
+@keyframes rotation{
+    0% {
+       transform: rotate(0);
+    }
+    100% {
+       transform: rotate(360deg);
+    }
+}
+
+.about__sun-image {
+  width: 100px;
+  height: 100px;
+  animation: rotation 10s  linear infinite;
+  position: absolute
+}
+
+.about h1 {
+  font-size: 70px;
+  line-height: 76px;
+}
+
+.about p {
+  font-size: 18px;
+  line-height: 30px;
+  opacity: 0.8;
+}
+
+.about button {
+  font-size: 18px;
+  padding: 20px 25px;
+  border-radius: 20px;
+  margin-top: 20px;
+}
+
+.about__info {
+  max-width: 550px;
+}
+
+.form__container {
+  width: 550px;
+}
+
+.form {
     background-color: #1D263A;
     color: #fff;
     padding-top: 115px;
@@ -86,431 +118,443 @@ header {
     text-align: center;
     display: flex;
     justify-content: center;
- }
-  
- .form h1 {
+}
+
+.form h1{
     font-size: 48px;
- }
-  
- .form p {
-    font-size: 18px;
-    opacity: 0.65;
- }
- .form__group {
+}
+
+.form p{
+     font-size: 18px;
+     opacity: 0.65;
+}
+
+.form__group {
     display: flex;
     flex-direction: column;
     text-align: left;
- }
- .form form {
-    margin-top: 60px;
-    display: grid;
-    grid-gap: 20px;
- }
- .form label {
-    font-weight: 600;
+}
+
+.form form {
+     display: grid;
+     grid-gap: 20px;
+     margin-top: 60px;
+}
+
+.form label {
     font-size: 18px;
-    margin-bottom: 20px;
- }
- .form input, .form select {
-    border: none;
-    border-radius: 15px;
-    padding: 0 20px;
-    outline: none;
+    font-weight: 600px;
+    margin-bottom: 15px;
+}
+
+.form input{
+     font-size: 18px;
+     color: #213053;
+     height: 60px;
+     padding: 0px 20px;
+     border-radius: 15px;
+     border: none;
+}
+
+.form select{
     font-size: 18px;
     color: #213053;
     height: 60px;
- }
- .form__submit {
-    margin-top: 40px;
-    font-weight: 600;
+    padding: 0px 20px;
+    border-radius: 15px;
+    border: none;
+}
+
+.form__submit {
     font-size: 18px;
- }
- button:hover {
-    background-color: #f6980c;
-    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
-    transition: background-color 0.3s ease-in;
- }
- footer {
+    font-weight: 600px;
+    margin-top: 40px;
+}
+
+select {
+  appearance: none;
+}
+
+input {
+  outline: none;
+}
+
+button:hover {
+  background-color: #f6980c;
+  box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+  transition: background-color 0.3s  ease-in;
+}
+
+.footer {
     padding: 90px 20px;
-    font-size: 16px;  
+    font-size: 16px;
     font-weight: 600;
- }
-  
- .footer__container {
-    display: flex;
-    justify-content: center;
- }
-  
- .footer__copy {
+}
+
+.footer__copyright {
+    margin-top: 40px
     text-align: center;
     opacity: 0.5;
-    margin-top: 40px;
- }
- .footer__group {
-    margin-right: 80px;
- }
-  
- footer h3 {
-    opacity: 0.7;
+}
+
+.footer__container {
+    display: flex;
+    justify-content: center;
+}
+
+
+.footer__group {
+ margin-left: 80px;
+}
+
+.footer h3 {
     font-size: 16px;
+    opacity: 0.7;
     margin-bottom: 30px;
- }
-  
- .footer__links {
+}
+
+.footer__links{
     display: flex;
     flex-direction: column;
- }
-  
- .footer__links a {
+}
+
+.footer__links a {
     margin-bottom: 15px;
- }
- @keyframes rotation {
-    0% {
-        transform: rotate(0);
-    }
-  
-    100% {
-        transform: rotate(360deg);
-    }
- }
- 
- .about__sun-image {
-    width: 100px;
-    height: 100px;
-    animation: rotation 10s infinite linear;
- }
- .about__sun-image {
-    width: 100px;
-    height: 100px;
-    position: absolute;
- }
- /* Планшеты */
-@media (max-width: 1024px) {
-    .about {
-        padding: 115px 20px;
-    }
-  
-    .about h1 {
-        font-size: 36px;
-        line-height: 40px;
-    }
-  
-    .about__image {
-        width: 280px;
-    }
-  
-    .about__sun-image {
-        width: 75px;
-        height: 75px;
-    }
- }
-  
- /* Мобильные устройства */
- @media (max-width: 720px) {
-    header {
-        padding: 10px;
-    }
-  
-    .header__logo {
-        height: 20px;
-    }
-  
-    header a {
-        margin-right: 10px;
-    }
-  
-    .about {
-        flex-direction: column-reverse;
-        padding: 50px 10px;
-    }
-  
-    .about h1 {
-        font-size: 36px;
-        line-height: 40px;
-    }
-  
-    .about__image {
-        width: 280px;
-    }
-  
-    .about__sun-image {
-        width: 75px;
-        height: 75px;
-    }
-  
-    .form {
-        padding: 50px 10px;
-    }
-  
-    .form h1 {
-        font-size: 36px;
-    }
-  
-    footer {
-        padding: 50px 10px;
-    }
-  
-    .footer__container {
-        flex-direction: column;
-    }
- }
- .features {
-   background-color: #fff;
-   padding: 115px 60px; 
- }
- 
- @media (max-width: 720px) {
+}
+
+@media (max-width: 720px) {
    .features {
-     padding: 50px 10px;
+       padding: 50px 10px;
    }
- }
- .cards {
-   display: grid;
-   grid-gap: 50px;
-   grid-template-columns: 1fr 1fr 1fr;
- }
- 
- .card {
-   padding: 35px 40px 25px 40px;
-   background: #FFFFFF;
-   border: 1px solid #D9E4E6;
-   border-radius: 5px;
- }
- 
- .card p {
-   opacity: 0.8;
-   font-size: 16px;
-   line-height: 22px;
- }
- 
- .card__logo {
-   font-weight: 700;
-   font-size: 32px;
-   background: #eaeff9;
-   border-radius: 50%;
-   height: 100px;
-   width: 100px;
-   display: flex;
-   justify-content: center;
-   align-items: center;
- }
- 
- .card__logo.yellow {
-   color: #ffb406;
- }
- 
- .card__logo.red {
-   color: #ad1714;
- }
- 
- .card__logo.green {
-   color: #22a030;
- }
- 
- @media (max-width: 720px) {
+
    .cards {
-     grid-template-columns: auto;
+       grid-template-columns: auto;
    }
- }
- .features__border {
-   width: 100%;
-   border: 1px solid #E6EAF4;
-   margin-top: 50px;
-   margin-bottom: 50px;
- }
- .features__feedback {
-   display: flex;
- }
- 
- .features__feedback-left {
-   margin-right: 10px;
- }
- 
- .features__feedback-left h2 {
-   font-size: 48px;
- }
- 
- .features__feedback-left p {
-   font-size: 18px;
-   opacity: 0.7;
-   line-height: 26px;
- }
- 
- .features__feedback-right {
-   display: flex;
-   align-items: center;
- }
- 
- .features__box {
-   border-radius: 25px;
-   padding: 30px 40px 25px 40px;
-   color: white;
- }
- 
- .features__box h3 {
-   font-size: 48px;
-   margin-top: 0;
-   margin-bottom: 20px;
- }
- 
- .features__savings-box {
-   background-color: #dc5e26;
-   box-shadow: 0 6px 0 rgb(221 95 38 / 20%);
-   margin-right: 30px;
- }
- 
- .features__rate-box {
-   background-color: #1D263A;
-   box-shadow: 0 6px 0 rgb(29 38 58 / 20%);
- }
- 
- .stars {
-   color: #ff7039;
- }
- 
- @media (max-width: 720px) {
+
    .features__feedback {
-     flex-direction: column;
+       flex-direction: column;
    }
- 
+
    .features__feedback-left {
-     margin-right: 0;
+       margin-right: 0;
    }
-   
+
    .features__feedback-left h2, .features__box h3 {
-     font-size: 36px;
+       font-size: 36px;
    }
- 
+
    .features__feedback-right {
-     flex-direction: column;
-     align-items: initial;
+       flex-direction: column;
+       align-items: initial;
    }
- 
+
    .features__savings-box {
-     margin-right: 0;
-     margin-bottom: 30px;
+       margin-right: 0;
+       margin-bottom: 30px;
    }
-  }
-  .promo {
-   display: flex;
- }
- 
- .promo__image {
-   background-image: url(img/promo.jpg);
-   width: 50%;
-   flex-shrink: 0;
-   background-size: cover;
-   background-position: center;
- }
- 
- .promo__right {
-   background: #dd5f26;
-   padding: 160px 60px;
- }
- 
- @media (max-width: 720px) {
    .promo {
-     flex-direction: column-reverse;
+       flex-direction: column-reverse;
    }
- 
+
    .promo__right {
-     padding: 50px 10px;
+       padding: 50px 10px;
    }
- 
+
    .promo__image {
-     width: 100%;
-     height: 500px;
+       width: 100%;
+       height: 500px;
    }
+}
+
+/* Планшеты */
+@media (max-width: 1024px) {
+   .about {
+       padding: 115px 20px;
+   }
+
+   .about h1 {
+       font-size: 36px;
+       line-height: 40px;
+   }
+
+   .about__image {
+       width: 280px;
+   }
+
+   .about__sun-image {
+       width: 75px;
+       height: 75px;
+   }
+}
+
+/* Мобильные устройства */
+@media (max-width: 720px) {
+   header {
+       padding: 10px;
+   }
+
+   .header__logo {
+       height: 20px;
+   }
+
+   header a {
+       margin-right: 10px;
+   }
+
+   .about {
+       flex-direction: column-reverse;
+       padding: 50px 10px;
+   }
+
+   .about h1 {
+       font-size: 36px;
+       line-height: 40px;
+   }
+
+   .about__image {
+       width: 280px;
+   }
+
+   .about__sun-image {
+       width: 75px;
+       height: 75px;
+   }
+
+   .form {
+       padding: 50px 10px;
+   }
+
+   .form h1 {
+       font-size: 36px;
+   }
+
+   footer {
+       padding: 50px 10px;
+   }
+
+   .footer__container {
+       flex-direction: column;
+   }
+}
+
+.features {
+  background-color: #fff;
+  padding: 115px 60px;
+}
+
+@media (max-width: 720px) {
+  .features {
+    padding: 50px 10px;
+  }
+}
+
+.cards {
+  display: grid;
+  grid-gap: 50px;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.card {
+  padding: 35px 40px 25px 40px;
+  background: #FFFFFF;
+  border: 1px solid #D9E4E6;
+  border-radius: 5px;
+}
+
+.card p {
+  opacity: 0.8;
+  font-size: 16px;
+  line-height: 22px;
+}
+
+.card__logo {
+  font-weight: 700;
+  font-size: 32px;
+  background: #eaeff9;
+  border-radius: 50%;
+  height: 100px;
+  width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.card__logo.yellow {
+  color: #ffb406;
+}
+
+.card__logo.red {
+  color: #ad1714;
+}
+
+.card__logo.green {
+  color: #22a030;
+}
+
+@media (max-width: 720px) {
+  .cards {
+    grid-template-columns: auto;
+  }
+}
+
+.features__border {
+  width: 100%;
+  border: 1px solid #E6EAF4;
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.features__feedback {
+  display: flex;
+}
+
+.features__feedback-left {
+  margin-right: 10px;
+}
+
+.features__feedback-left h2 {
+  font-size: 48px;
+}
+
+.features__feedback-left p {
+  font-size: 18px;
+  opacity: 0.7;
+  line-height: 26px;
+}
+
+.features__feedback-right {
+  display: flex;
+  align-items: center;
+}
+
+.features__box {
+  border-radius: 25px;
+  padding: 30px 40px 25px 40px;
+  color: white;
+}
+
+.features__box h3 {
+  font-size: 48px;
+  margin-top: 0;
+  margin-bottom: 20px;
+}
+
+.features__savings-box {
+  background-color: #dc5e26;
+  box-shadow: 0 6px 0 rgb(221 95 38 / 20%);
+  margin-right: 30px;
+}
+
+.features__rate-box {
+  background-color: #1D263A;
+  box-shadow: 0 6px 0 rgb(29 38 58 / 20%);
+}
+
+.stars {
+  color: #ff7039;
+}
+
+@media (max-width: 720px) {
+  .features__feedback {
+    flex-direction: column;
+  }
+
+  .features__feedback-left {
+    margin-right: 0;
+  }
+
+  .features__feedback-left h2, .features__box h3 {
+    font-size: 36px;
+  }
+
+  .features__feedback-right {
+    flex-direction: column;
+    align-items: initial;
+  }
+
+  .features__savings-box {
+    margin-right: 0;
+    margin-bottom: 30px;
+  }
  }
- .promo__text {
-   background-color: white;
-   padding: 30px 40px;
-   border-radius: 25px;
-   font-size: 20px;
-   font-weight: 500;
-   line-height: 26px;
- }
- 
- .promo__text p::before {
-   content: '';
-   display: inline-block;
-   width: 10px;
-   height: 10px;
-   border-radius: 50%;
-   background-color: #ec6b29;
-   margin-right: 10px;
- }
- 
- .promo__text p {
-   opacity: 0.8;
- }
- 
- .promo__text button {
-   background-color: #6aec7a;
-   margin-top: 20px;
-   font-weight: 600;
-   font-size: 18px;
-   box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
-   padding: 15px 30px;
- }
- 
- .promo__button-wrap {
-   display: flex;
-   justify-content: center;
- }
- 
- .promo__text button i {
-   font-size: 15px;
-   margin-left: 5px;
- }
- .promo__text {
-   background-color: white;
-   padding: 30px 40px;
-   border-radius: 25px;
-   font-size: 20px;
-   font-weight: 500;
-   line-height: 26px;
- }
- 
- .promo__text p::before {
-   content: '';
-   display: inline-block;
-   width: 10px;
-   height: 10px;
-   border-radius: 50%;
-   background-color: #f56821;
-   margin-right: 10px;
- }
- 
- .promo__text p {
-   opacity: 0.8;
- }
- 
- .promo__text button {
-   background-color: #0b2b0f;
-   margin-top: 20px;
-   font-weight: 600;
-   font-size: 18px;
-   box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
-   padding: 15px 30px;
- }
- 
- .promo__button-wrap {
-   display: flex;
-   justify-content: center;
- }
- 
- .promo__text button i {
-   font-size: 15px;
-   margin-left: 5px;
- }
- .about {
-  position: relative;
+
+.promo {
+  display: flex;
+}
+
+.promo__image {
+  background-image: url(img/promo.jpg);
+  width: 50%;
+  flex-shrink: 0;
+  background-size: cover;
+  background-position: center;
+}
+
+.promo__right {
+  background: #dd5f26;
+  padding: 160px 60px;
+}
+
+@media (max-width: 720px) {
+  .promo {
+    flex-direction: column-reverse;
+  }
+
+  .promo__right {
+    padding: 50px 10px;
+  }
+
+  .promo__image {
+    width: 100%;
+    height: 500px;
+  }
+}
+
+.promo__text {
+  background-color: white;
+  padding: 30px 40px;
+  border-radius: 25px;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 26px;
+}
+
+.promo__text p::before {
+  content: '';
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background-color: #ec6b29;
+  margin-right: 10px;
+}
+
+.promo__text p {
+  opacity: 0.8;
+}
+
+.promo__text button {
+  background-color: #107b1c;
+  margin-top: 20px;
+  font-weight: 600;
+  font-size: 18px;
+  box-shadow: 0 16px 36px rgb(16 122 28 / 30%);
+  padding: 15px 30px;
+}
+
+.promo__button-wrap {
+  display: flex;
+  justify-content: center;
+}
+
+.promo__text button i {
+  font-size: 15px;
+  margin-left: 5px;
 }
 
 .orb-canvas {
-  position: absolute;
-  top: 0;
-  height: 100%;
-  right: 0;
+   position: absolute;
+   top: 0;
+   height: 100%;
+   right: 0;
 }
